# nvm-win

./: .editorconfig  .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
scripts/: release.sh
src/: installer.rs  main.rs
